# haskell-in-depth

./: .gitignore  CHANGELOG.md  Makefile  README.md  haskell-in-depth.cabal  test.sh
app/: Main.hs
src/Chapter01/: CountWords.hs
src/Chapter02/: Antenna.hs
tests/: AntennaSpec.hs  CountWordsSpec.hs  CountWordsTextSpec.hs  DeterminantSpec.hs  DummySpec.hs  ExtractWordsSpec.hs  ListTripleSpec.hs  OrderingSpec.hs  SpecHook.hs
tests/Chapter01/: CountWordsSpec.hs
tests/Chapter02/: AntennaSpec.hs
tests/dist-newstyle/cache/: compiler
