cabal-version:      3.0
name:               haskell-in-depth
version:            0.1.0.0
synopsis: Exercises reading Haskell In Depth
-- description:
license:            LGPL-3.0-or-later
author:             Arialdo Martini
maintainer:         arialdo.martini@gmail.com
build-type:         Simple
extra-doc-files:    README.md

-- extra-source-files:

common warnings
    ghc-options: -Wall

test-suite haskell-in-depth-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    hs-source-dirs:   tests
    main-is:          Main.hs

    build-depends:    base ^>=4.17.0.0
