cabal-version:      3.0
name:               haskell-in-depth
version:            0.1.0.0
synopsis: Exercises reading Haskell In Depth
-- description:
license:            LGPL-3.0-or-later
author:             Arialdo Martini
maintainer:         arialdo.martini@gmail.com
build-type:         Simple
extra-doc-files:    README.md

-- extra-source-files:

common warnings
    ghc-options: -Wall


library
    import:           warnings
    exposed-modules:  Chapter01.CountWords
                      Chapter02.Antenna
    build-depends:    base ^>=4.17.0.0
                    , text==2.*
                    , directory

    hs-source-dirs:   src
    default-language: Haskell2010




test-suite haskell-in-depth-test
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   tests
    main-is:          Spec.hs
    ghc-options: -Wall
    other-modules:
      SpecHook
      DummySpec
      Chapter01.CountWordsSpec
      Chapter02.AntennaSpec

    build-depends:    haskell-in-depth
                    , base ^>=4.17.0.0
                    , hspec==2.*
                    , text==2.*
                    , directory

    build-tool-depends: hspec-discover:hspec-discover == 2.*
